# enhance-video

./: .gitignore  CODING_LOG.md  PR_DESCRIPTION.md  README.md  VALIDATION_README.md  cli.py  pyproject.toml  requirements.txt  requirements_validation.txt  run_checks.sh  test_validation.sh  toolchain.py  upscale_video.py  validate_upscale.py
.github/workflows/: ci.yml
docs/: architecture.md  audit.md  development.md  roadmap.md
enhance-ai/: README.md
enhance_video/: __init__.py  media.py  pipeline.py  scene_adaptive.py  telemetry.py  toolchain.py  ui.py  validation.py
review_pack/: summary.md
scripts/: check_repo_hygiene.py
tests/: test_e2e_smoke.py  test_frame_integrity.py  test_model_selection.py  test_otlp.py  test_packaging_contract.py  test_ui.py  test_upscale_video.py  test_validation_contract.py
