[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enhance-video"
version = "1.0.0"
description = "Production-grade video upscaling CLI built around Real-ESRGAN"
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.66.0"
]

[project.optional-dependencies]
telemetry = [
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp"
]

[project.scripts]
enhance-video = "upscale_video:main"

[tool.setuptools]
py-modules = ["upscale_video"]
